--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- header -->
+    <header>
+    </header> 
+    <!-- main -->
+    <main>
+    </main>
+    <!-- footer -->
+    <footer>
+    </footer>
     
 </body>
 </html>
