--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <!-- header -->
-    <header>
-        <a href="https://mishastryzhka.github.io/goit-markup-hw-01/">WebStudio</a>
+    <header id="top">
+        <a href="index.html">WebStudio</a>
 
         <nav>
-            <a href="1.html">Студия</a>
-            <a href="2.html">Портфолио</a>
-            <a href="3.html">Контакты</a>
+            <a href="#top">Студия</a>
+            <a href="#portfolio">Портфолио</a>
+            <a href="#Contacts">Контакты</a>
         </nav>
 
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -40,14 +40,14 @@
             </div> -->
         
         </div>
-    </header> 
+    </header > 
     <!-- main -->
-    <main>
+    <main id="portfolio">
         <h2>123</h2>
     </main>
     <!-- footer -->
-    <footer>
-        <a href="https://mishastryzhka.github.io/goit-markup-hw-01/">WebStudio</a>
+    <footer id="Contacts">
+        <a href="index.html">WebStudio</a>
     </footer>
     
 </body>
