--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,7 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <!-- header -->
+    <!-- Верхняя линия -->
     <header id="top">
         <a href="index.html">WebStudio</a>
 
@@ -43,9 +43,28 @@
     </header > 
     <!-- main -->
     <main id="portfolio">
-        <h2>123</h2>
+        <!-- шапка -->
+        <header>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="button">Заказать услугу</button>
+        </header>
+        
+        <!-- особенности -->
+        <section>
+            <h2>123</h2>
+        </section>
+
+        <!-- Чем мы занимаемся -->
+        <section>
+            <h2>234</h2>
+        </section>
+
+        <!-- Наша команда -->
+        <section>
+            <h2>345</h2>
+        </section>
     </main>
-    <!-- footer -->
+    <!-- Подвал -->
     <footer id="Contacts">
         <a href="index.html">WebStudio</a>
     </footer>
