addet foto section "Чем мы занимаемся"

--- a/index.html
+++ b/index.html
@@ -63,12 +63,15 @@
 
         <!-- Чем мы занимаемся -->
         <section>
-            <h2>234</h2>
+            <h2>Чем мы занимаемся</h2>
+            <img src="images/box1.jpg" alt="Someone is typing code on the keyboard." width="370px" height="294px">
+            <img src="images/box2.jpg" alt="Someone is developing a program for a smartphone." width="370px" height="294px">
+            <img src="images/box3.jpg" alt="Someone is designing." width="370px" height="294px">
         </section>
 
         <!-- Наша команда -->
         <section>
-            <h2>345</h2>
+            <h2>Наша команда</h2>
         </section>
     </main>
     <!-- Подвал -->
