--- a/index.html
+++ b/index.html
@@ -72,6 +72,40 @@
         <!-- Наша команда -->
         <section>
             <h2>Наша команда</h2>
+
+            <div>
+                <figure>
+                    <img src="images/igor.demyanenko.jpg" alt="igor.demyanenko" />
+                    <figcaption>
+                        <h4>Игорь Демьяненко</h4>
+                        <p>Product Designer</p>
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/olga.repina.jpg" alt="olga.repina" />
+                    <figcaption>
+                        <h4>Ольга Репина</h4>
+                        <p>Frontend Developer</p>
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/nikolai.tarasov.jpg" alt="nikolai.tarasov" />
+                    <figcaption>
+                        <h4>Николай Тарасов</h4>
+                        <p>Marketing</p>
+                    </figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/mikhail.ermakov.jpg" alt="mikhail.ermakov" />
+                    <figcaption>
+                        <h4>Михаил Ермаков</h4>
+                        <p>UI Designer</p>
+                    </figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <!-- Подвал -->
