--- a/index.html
+++ b/index.html
@@ -16,17 +16,24 @@
 <body>
     <!-- Верхняя линия -->
     <header id="top">
-        <a href="index.html">WebStudio</a>
-
         <nav>
-            <a href="#top">Студия</a>
-            <a href="#portfolio">Портфолио</a>
-            <a href="#Contacts">Контакты</a>
+            <a href="/">WebStudio</a>
+
+            <ul>
+                <li><a href="#top">Студия</a></li>
+                <li><a href="#portfolio">Портфолио</a></li>
+                <li><a href="#Contacts">Контакты</a></li>
+            </ul>
         </nav>
 
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
 
         <!-- Contacts
         <div class="contacts">
@@ -48,17 +55,36 @@
         
         </div>
     </header > 
+
+    <div>
+        <section>
+            <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br /> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <button type="button" class="button">Заказать услугу</button>
+        </section>
+    </div>
     <!-- main -->
     <main id="portfolio">
-        <!-- шапка -->
-        <header>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="button">Заказать услугу</button>
-        </header>
         
         <!-- особенности -->
         <section>
-            <h2>123</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
         </section>
 
         <!-- Чем мы занимаемся -->
@@ -75,7 +101,7 @@
 
             <div>
                 <figure>
-                    <img src="images/igor.demyanenko.jpg" alt="igor.demyanenko" />
+                    <img src="images/igor.demyanenko.jpg" alt="igor.demyanenko" width="270px" height="260"/>
                     <figcaption>
                         <h4>Игорь Демьяненко</h4>
                         <p>Product Designer</p>
@@ -83,7 +109,7 @@
                 </figure>
 
                 <figure>
-                    <img src="images/olga.repina.jpg" alt="olga.repina" />
+                    <img src="images/olga.repina.jpg" alt="olga.repina" width="270px" height="260"/>
                     <figcaption>
                         <h4>Ольга Репина</h4>
                         <p>Frontend Developer</p>
@@ -91,7 +117,7 @@
                 </figure>
 
                 <figure>
-                    <img src="images/nikolai.tarasov.jpg" alt="nikolai.tarasov" />
+                    <img src="images/nikolai.tarasov.jpg" alt="nikolai.tarasov" width="270px" height="260"/>
                     <figcaption>
                         <h4>Николай Тарасов</h4>
                         <p>Marketing</p>
@@ -99,7 +125,7 @@
                 </figure>
 
                 <figure>
-                    <img src="images/mikhail.ermakov.jpg" alt="mikhail.ermakov" />
+                    <img src="images/mikhail.ermakov.jpg" alt="mikhail.ermakov" width="270px" height="260"/>
                     <figcaption>
                         <h4>Михаил Ермаков</h4>
                         <p>UI Designer</p>
