Змінив код html

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
         
         <!-- особенности -->
         <section>
+            <h2>Особенности</h2>
+
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -90,48 +92,56 @@
         <!-- Чем мы занимаемся -->
         <section>
             <h2>Чем мы занимаемся</h2>
-            <img src="images/box1.jpg" alt="Someone is typing code on the keyboard." width="370px" height="294px">
-            <img src="images/box2.jpg" alt="Someone is developing a program for a smartphone." width="370px" height="294px">
-            <img src="images/box3.jpg" alt="Someone is designing." width="370px" height="294px">
+            <ul>
+                <li>
+                    <img src="./images/box1.jpg" alt="Someone is typing code on the keyboard." width="370">
+                </li>
+                <li>
+                    <img src="./images/box2.jpg" alt="Someone is developing a program for a smartphone." width="370">
+                </li>
+                <li>
+                    <img src="./images/box3.jpg" alt="Someone is designing." width="370">
+                </li>
+            </ul>
         </section>
 
         <!-- Наша команда -->
         <section>
             <h2>Наша команда</h2>
 
-            <div>
-                <figure>
-                    <img src="images/igor.demyanenko.jpg" alt="igor.demyanenko" width="270px" height="260"/>
-                    <figcaption>
-                        <h4>Игорь Демьяненко</h4>
-                        <p>Product Designer</p>
-                    </figcaption>
-                </figure>
+            <ul>
+                <li>
+                    <figure>
+                        <img src="./images/igor.demyanenko.jpg" alt="igor.demyanenko" width="270"/>
+                        <figcaption>
+                            <h3>Игорь Демьяненко</h3>
+                            <p>Product Designer</p>
+                        </figcaption>
+                    </figure>
+                </li>
 
-                <figure>
-                    <img src="images/olga.repina.jpg" alt="olga.repina" width="270px" height="260"/>
+                <li><figure>
+                    <img src="./images/olga.repina.jpg" alt="olga.repina" width="270"/>
                     <figcaption>
-                        <h4>Ольга Репина</h4>
+                        <h3>Ольга Репина</h3>
                         <p>Frontend Developer</p>
                     </figcaption>
-                </figure>
+                </figure></li>
 
-                <figure>
-                    <img src="images/nikolai.tarasov.jpg" alt="nikolai.tarasov" width="270px" height="260"/>
-                    <figcaption>
-                        <h4>Николай Тарасов</h4>
-                        <p>Marketing</p>
-                    </figcaption>
-                </figure>
+                <li><img src="./images/nikolai.tarasov.jpg" alt="nikolai.tarasov" width="270" />
+                <figcaption>
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </figcaption></li>
 
-                <figure>
-                    <img src="images/mikhail.ermakov.jpg" alt="mikhail.ermakov" width="270px" height="260"/>
+                <li><figure>
+                    <img src="./images/mikhail.ermakov.jpg" alt="mikhail.ermakov" width="270"/>
                     <figcaption>
-                        <h4>Михаил Ермаков</h4>
+                        <h3>Михаил Ермаков</h3>
                         <p>UI Designer</p>
                     </figcaption>
-                </figure>
-            </div>
+                </figure></li>
+            </ul>
         </section>
     </main>
     <!-- Подвал -->
