--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <img src="./images/igor.demyanenko.jpg" alt="igor.demyanenko" width="270"/>
                         <figcaption>
                             <h3>Игорь Демьяненко</h3>
-                            <p>Product Designer</p>
+                            <p lang="en">Product Designer</p>
                         </figcaption>
                     </figure>
                 </li>
@@ -124,21 +124,21 @@
                     <img src="./images/olga.repina.jpg" alt="olga.repina" width="270"/>
                     <figcaption>
                         <h3>Ольга Репина</h3>
-                        <p>Frontend Developer</p>
+                        <p lang="en">Frontend Developer</p>
                     </figcaption>
                 </figure></li>
 
                 <li><img src="./images/nikolai.tarasov.jpg" alt="nikolai.tarasov" width="270" />
                 <figcaption>
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p lang="en">Marketing</p>
                 </figcaption></li>
 
                 <li><figure>
                     <img src="./images/mikhail.ermakov.jpg" alt="mikhail.ermakov" width="270"/>
                     <figcaption>
                         <h3>Михаил Ермаков</h3>
-                        <p>UI Designer</p>
+                        <p lang="en">UI Designer</p>
                     </figcaption>
                 </figure></li>
             </ul>
@@ -146,7 +146,22 @@
     </main>
     <!-- Подвал -->
     <footer id="Contacts">
-        <a href="index.html">WebStudio</a>
+        <ul>
+            <li>
+                <a href="index.html">WebStudio</a>
+            </li>
+            <li>
+                <address>
+                г. Киев, пр-т Леси Украинки, 26
+            </address>
+            </li>
+            <li>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+        </ul>
     </footer>
     
 </body>
