Виправив помилки валідатором

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="#top">Студия</a></li>
                 <li><a href="#portfolio">Портфолио</a></li>
-                <li><a href="#Contacts">Контакты</a></li>
+                <li><a href="#сontacts">Контакты</a></li>
             </ul>
         </nav>
 
@@ -52,19 +52,15 @@
                     <a href="mailto:misha.strizhcko@gmail.com" class="contact-link">misha.strizhcko@gmail.com</a>
                 </p>
             </div> -->
-        
-        </div>
-    </header > 
-
-    <div>
+    </header >
+    <!-- Уникальний контент -->
+    <main>
+        <!-- шапка сайта -->
         <section>
             <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br /> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button type="button" class="button">Заказать услугу</button>
         </section>
-    </div>
-    <!-- main -->
-    <main id="portfolio">
-        
+
         <!-- особенности -->
         <section>
             <h2>Особенности</h2>
@@ -94,13 +90,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/box1.jpg" alt="Someone is typing code on the keyboard." width="370">
+                    <img src="./images/box1.jpg" alt="Кто-то набирает код на клавиатуре." width="370">
                 </li>
                 <li>
-                    <img src="./images/box2.jpg" alt="Someone is developing a program for a smartphone." width="370">
+                    <img src="./images/box2.jpg" alt="Кто-то разрабатывает программу для смартфона." width="370">
                 </li>
                 <li>
-                    <img src="./images/box3.jpg" alt="Someone is designing." width="370">
+                    <img src="./images/box3.jpg" alt="Кто-то занимается дизайном." width="370">
                 </li>
             </ul>
         </section>
@@ -112,7 +108,7 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="./images/igor.demyanenko.jpg" alt="igor.demyanenko" width="270"/>
+                        <img src="./images/igor.demyanenko.jpg" alt="Игорь Демьяненко" width="270"/>
                         <figcaption>
                             <h3>Игорь Демьяненко</h3>
                             <p lang="en">Product Designer</p>
@@ -120,32 +116,40 @@
                     </figure>
                 </li>
 
-                <li><figure>
-                    <img src="./images/olga.repina.jpg" alt="olga.repina" width="270"/>
-                    <figcaption>
-                        <h3>Ольга Репина</h3>
-                        <p lang="en">Frontend Developer</p>
-                    </figcaption>
-                </figure></li>
+                <li>
+                    <figure>
+                        <img src="./images/olga.repina.jpg" alt="Ольга Репина" width="270" />
+                        <figcaption>
+                            <h3>Ольга Репина</h3>
+                            <p lang="en">Frontend Developer</p>
+                        </figcaption>
+                    </figure>
+                </li>
 
-                <li><img src="./images/nikolai.tarasov.jpg" alt="nikolai.tarasov" width="270" />
-                <figcaption>
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
-                </figcaption></li>
+                <li>
+                    <figure>
+                        <img src="./images/nikolai.tarasov.jpg" alt="Николай Тарасов" width="270" />
+                        <figcaption>
+                            <h3>Николай Тарасов</h3>
+                            <p lang="en">Marketing</p>
+                        </figcaption>
+                    </figure>
+                </li>
 
-                <li><figure>
-                    <img src="./images/mikhail.ermakov.jpg" alt="mikhail.ermakov" width="270"/>
-                    <figcaption>
-                        <h3>Михаил Ермаков</h3>
-                        <p lang="en">UI Designer</p>
-                    </figcaption>
-                </figure></li>
+                <li>
+                    <figure>
+                        <img src="./images/mikhail.ermakov.jpg" alt="Михаил Ермаков" width="270"/>
+                        <figcaption>
+                            <h3>Михаил Ермаков</h3>
+                            <p lang="en">UI Designer</p>
+                        </figcaption>
+                    </figure>
+                </li>
             </ul>
         </section>
     </main>
     <!-- Подвал -->
-    <footer id="Contacts">
+    <footer id="сontacts">
         <ul>
             <li>
                 <a href="index.html">WebStudio</a>
