Виправив одну букву

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="#top">Студия</a></li>
                 <li><a href="#portfolio">Портфолио</a></li>
-                <li><a href="#сontacts">Контакты</a></li>
+                <li><a href="#contacts">Контакты</a></li>
             </ul>
         </nav>
 
@@ -149,7 +149,7 @@
         </section>
     </main>
     <!-- Подвал -->
-    <footer id="сontacts">
+    <footer id="contacts">
         <a href="index.html">WebStudio</a>
             <address>
                 <ul>
