Задав правильне посилання на головну сторінку

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Верхняя линия -->
     <header id="top">
         <nav>
-            <a href="index.html">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
 
             <ul>
                 <li><a href="#top">Студия</a></li>
