--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <!-- Верхняя линия -->
+    <!-- Шапка сайту -->
     <header id="top">
         <nav>
             <a href="./index.html"><span>Web</span>Studio</a>
@@ -38,7 +38,7 @@
     </header >
     <!-- Уникальний контент -->
     <main>
-        <!-- шапка сайта -->
+        <!-- герой -->
         <section>
             <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br /> ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button type="button" class="button">Заказать услугу</button>
@@ -94,7 +94,7 @@
                         <img src="./images/igor.demyanenko.jpg" alt="Игорь Демьяненко" width="270"/>
                         <figcaption>
                             <h3>Игорь Демьяненко</h3>
-                            <p lang="en">Product Designer</p>
+                            <p>Product Designer</p>
                         </figcaption>
                     </figure>
                 </li>
@@ -104,7 +104,7 @@
                         <img src="./images/olga.repina.jpg" alt="Ольга Репина" width="270" />
                         <figcaption>
                             <h3>Ольга Репина</h3>
-                            <p lang="en">Frontend Developer</p>
+                            <p>Frontend Developer</p>
                         </figcaption>
                     </figure>
                 </li>
@@ -114,7 +114,7 @@
                         <img src="./images/nikolai.tarasov.jpg" alt="Николай Тарасов" width="270" />
                         <figcaption>
                             <h3>Николай Тарасов</h3>
-                            <p lang="en">Marketing</p>
+                            <p>Marketing</p>
                         </figcaption>
                     </figure>
                 </li>
@@ -124,7 +124,7 @@
                         <img src="./images/mikhail.ermakov.jpg" alt="Михаил Ермаков" width="270"/>
                         <figcaption>
                             <h3>Михаил Ермаков</h3>
-                            <p lang="en">UI Designer</p>
+                            <p>UI Designer</p>
                         </figcaption>
                     </figure>
                 </li>
