--- a/index.html
+++ b/index.html
@@ -90,43 +90,27 @@
 
             <ul>
                 <li>
-                    <figure>
-                        <img src="./images/igor.demyanenko.jpg" alt="Игорь Демьяненко" width="270"/>
-                        <figcaption>
-                            <h3>Игорь Демьяненко</h3>
-                            <p>Product Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/igor.demyanenko.jpg" alt="Игорь Демьяненко" width="270"/>
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <figure>
-                        <img src="./images/olga.repina.jpg" alt="Ольга Репина" width="270" />
-                        <figcaption>
-                            <h3>Ольга Репина</h3>
-                            <p>Frontend Developer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/olga.repina.jpg" alt="Ольга Репина" width="270" />
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
                 </li>
 
                 <li>
-                    <figure>
-                        <img src="./images/nikolai.tarasov.jpg" alt="Николай Тарасов" width="270" />
-                        <figcaption>
-                            <h3>Николай Тарасов</h3>
-                            <p>Marketing</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/nikolai.tarasov.jpg" alt="Николай Тарасов" width="270" />
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
                 </li>
 
                 <li>
-                    <figure>
-                        <img src="./images/mikhail.ermakov.jpg" alt="Михаил Ермаков" width="270"/>
-                        <figcaption>
-                            <h3>Михаил Ермаков</h3>
-                            <p>UI Designer</p>
-                        </figcaption>
-                    </figure>
+                    <img src="./images/mikhail.ermakov.jpg" alt="Михаил Ермаков" width="270"/>
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -134,17 +118,11 @@
     <!-- Подвал -->
     <footer id="contacts">
         <a href="./index.html"><span>Web</span>Studio</a>
-            <address>
-                г. Киев, пр-т Леси Украинки, 26
-            </address>
-                    
-            <address>
-                <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-                
-            </address>
+        <ul>
+            <li>г. Киев, пр-т Леси Украинки, 26</li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
     </footer>  
 </body>
 </html>
